added name prompt as temp

--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<div class="main">
 			<div>
-				<h2 class="headTitle"><marquee>Socket.io Chat</marquee></h2>
+				<h2 class="headTitle">Socket.io Chat</h2>
 			</div>
 			<div id="chatContainer">
 				<div id="messagesView">
@@ -20,12 +20,10 @@
 
 				<form id="userInput">
 
-					<label for="name">handle: </label>
-					<input type="text" placeholder="Mr. Milk" value="Mr. Milk" id="name">
+					<!-- <label for="name">handle: </label> -->
+					<!-- <input type="text" placeholder="Mr. Milk" value="Mr. Milk" id="name"> -->
 					
 					<input type="text" placeholder="Enter message here..." id="m">
-					
-					<br>
 					<input type="submit" value="Send">
 				</form>
 
@@ -35,18 +33,23 @@
 		<script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
 		<script src="http://code.jquery.com/jquery-1.11.1.js"></script>
 		<script>
+			var name = prompt("Enter your chat handle:");
+
+			if (name.length < 1) name = "Pippy";
+			
+			//$("#name").val(name);
 			var socket = io();
 			$('form').submit(function(){
-				var name = $("#name").val();
+				//name = $("#name").val();
 				var msg = document.getElementById("m").value;
 				socket.emit('cMsg', [name, msg]);
 
-				document.getElementById("m").value = "";		    
+				document.getElementById("m").value = "";    
 				return false;	
 			});
 
 			socket.on("cMsg", function(msg) {
-				$("#messages").append($("<li>").text('['+msg[0]+'] ' + msg[1]+': ' + msg[2]));
+				$("#messages").append($("<li>").text('[' + msg[0] + '] ' + msg[1] + ': ' + msg[2]));
 			});
 
 			var $cont = $('#messagesView');
