--- a/public/index.html
+++ b/public/index.html
@@ -24,15 +24,16 @@
             <div id="chatContainer">
               <div id="messagesView">
                 <ul id="messages">
-                  
                 </ul>
-                <div id="status" style="padding: 5px;"></div>
               </div>
-
+              <div id="status" style="font-size: 12px; padding: 5px;height: 10px;"></div>
               <form id="userInput">
-                
-                <input type="text" placeholder="Enter message here..." id="m">
-                <input type="submit" value="Send">
+                <table>
+                <tr>
+                  <td><input type="text" placeholder="Enter message here..." id="m" style="min-width: 400px; height: 30px;"></td>
+                  <td><input type="submit" value="Send"></td>
+                </tr>
+                </table>
               </form>
 
             </div>
